completed the bakery csv

--- a/merge.ipynb
+++ b/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,40 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "julia"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   transaction_id transaction_date transaction_time  transaction_qty store_id  \\\n",
-      "0        150040.0       2021-01-02            08:38              1.0     None   \n",
-      "1        150040.0       2021-01-02            08:38              3.0     None   \n",
-      "2        150041.0       2021-01-02            09:14              2.0     None   \n",
-      "3        150041.0       2021-01-02            09:14              1.0     None   \n",
-      "4        150042.0       2021-01-02            09:25              5.0     None   \n",
-      "\n",
-      "  store_location product_id  unit_price product_category product_type  \\\n",
-      "0           None       None        0.90           Bakery         None   \n",
-      "1           None       None        1.20           Bakery         None   \n",
-      "2           None       None        1.20           Bakery         None   \n",
-      "3           None       None        1.15           Bakery         None   \n",
-      "4           None       None        1.20           Bakery         None   \n",
-      "\n",
-      "         product_detail  \n",
-      "0              BAGUETTE  \n",
-      "1      PAIN AU CHOCOLAT  \n",
-      "2      PAIN AU CHOCOLAT  \n",
-      "3                  PAIN  \n",
-      "4  TRADITIONAL BAGUETTE  \n"
-     ]
-    }
-   ],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#clean the unit_price column by removing the € sign and converting the column to float\n",
     "bakery_sales[\"unit_price\"] = (\n",
@@ -102,11 +71,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "bakery_sales.to_csv(\"bakery_sales_new.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Coffee' 'Tea' 'Drinking Chocolate' 'Bakery' 'Flavours' 'Loose Tea'\n",
+      " 'Coffee beans' 'Packaged Chocolate' 'Branded']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_categories = Coffee_sales['product_category'].unique()\n",
+    "print(unique_categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "product_type       3\n",
+      "product_detail    11\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filter the Coffee_sales DataFrame for Bakery category and list unique product types and details\n",
+    "bakery_items = Coffee_sales[Coffee_sales['product_category'] == 'Bakery'][['product_type', 'product_detail']].drop_duplicates()\n",
+    "print(bakery_items.nunique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read the new CSV file and perform the same analysis on it\n",
+    "bakery_sales_new = pd.read_csv(\"bakery_sales_new.csv\")\n",
+    "bakery_items_new = bakery_sales_new[bakery_sales_new['product_category'] == 'Bakery'][['product_detail']].drop_duplicates()\n",
+    "print(bakery_items_new['product_detail'].unique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bakery_sales_new' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 39\u001b[0m\n\u001b[0;32m     35\u001b[0m         prod_type \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOther\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m category, prod_type, article\n\u001b[1;32m---> 39\u001b[0m bakery_sales_new[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_category\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_type\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_detail\u001b[39m\u001b[38;5;124m'\u001b[39m]] \u001b[38;5;241m=\u001b[39m bakery_sales_new[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_detail\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(\n\u001b[0;32m     40\u001b[0m     \u001b[38;5;28;01mlambda\u001b[39;00m x: pd\u001b[38;5;241m.\u001b[39mSeries(map_article_to_category(x))\n\u001b[0;32m     41\u001b[0m )\n\u001b[0;32m     43\u001b[0m bakery_sales_new\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbakery_sales_merged.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'bakery_sales_new' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def map_article_to_category(article):\n",
+    "    normalized = article.strip().upper()\n",
+    "    \n",
+    "    if \"CAFE\" in normalized:\n",
+    "        return \"Coffee\", \"Coffee\", article\n",
+    "    if normalized == \"THE\":\n",
+    "        return \"Tea\", \"Tea\", article\n",
+    "    \n",
+    "    category = \"Bakery\"\n",
+    "    \n",
+    "    breads = ['BAGUETTE', 'PAIN', 'BOULE', 'PAIN DE MIE', 'SEIGLE', 'VIK BREAD', 'PAIN BANETTE', 'PAIN NOIR']\n",
+    "    viennoiseries = ['PAIN AU CHOCOLAT', 'CROISSANT', 'KOUIGN AMANN', 'BRIOCHE', 'CHAUSSON', 'VIENNOISERIE']\n",
+    "    patisseries = ['TARTE', 'ECLAIR', 'FRAISIER', 'ST HONORE', 'MACARON', 'ENTREMETS', 'PARIS BREST', 'ROYAL', 'TROPEZIENNE',\n",
+    "                   'FINANCIER', 'CRUMBLE', 'MILLES FEUILLES', 'RELIGIEUSE', 'MERINGUE']\n",
+    "    sandwiches = ['SANDWICH', 'SAND JB', 'FORMULE SANDWICH']\n",
+    "    beverages = ['BOISSON', 'EAU']\n",
+    "    meals = ['PLAT', 'TRAITEUR', 'PLATEAU', 'FORMULE PLAT PREPARE', 'PLATPREPARE']\n",
+    "    confections = ['CONFISERIE', 'SUCETTE', 'CHOCOLAT', 'MERINGUE', 'SABLE', 'BONBON']\n",
+    "    \n",
+    "    if any(word in normalized for word in breads):\n",
+    "        prod_type = \"Bread\"\n",
+    "    elif any(word in normalized for word in viennoiseries):\n",
+    "        prod_type = \"Viennoiserie\"\n",
+    "    elif any(word in normalized for word in patisseries):\n",
+    "        prod_type = \"Pâtisserie\"\n",
+    "    elif any(word in normalized for word in sandwiches):\n",
+    "        prod_type = \"Sandwich\"\n",
+    "    elif any(word in normalized for word in meals):\n",
+    "        prod_type = \"Meal/Traiteur\"\n",
+    "    elif any(word in normalized for word in beverages):\n",
+    "        prod_type = \"Beverage\"\n",
+    "    elif any(word in normalized for word in confections):\n",
+    "        prod_type = \"Confectionery\"\n",
+    "    else:\n",
+    "        prod_type = \"Other\"\n",
+    "        \n",
+    "    return category, prod_type, article\n",
+    "\n",
+    "bakery_sales_new[['product_category', 'product_type', 'product_detail']] = bakery_sales_new['product_detail'].apply(\n",
+    "    lambda x: pd.Series(map_article_to_category(x))\n",
+    ")\n",
+    "\n",
+    "bakery_sales_new.to_csv(\"bakery_sales_merged.csv\", index=False)\n"
    ]
   }
  ],
