dealt with missing values on the csv of bakery

--- a/merge.ipynb
+++ b/merge.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,6 @@
     }
    ],
    "source": [
-    "# filter the Coffee_sales DataFrame for Bakery category and list unique product types and details\n",
     "bakery_items = Coffee_sales[Coffee_sales['product_category'] == 'Bakery'][['product_type', 'product_detail']].drop_duplicates()\n",
     "print(bakery_items.nunique())\n"
    ]
@@ -122,9 +121,49 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BAGUETTE' 'PAIN AU CHOCOLAT' 'PAIN' 'TRADITIONAL BAGUETTE' 'CROISSANT'\n",
+      " 'BANETTE' 'BANETTINE' 'SPECIAL BREAD' 'COUPE' 'SAND JB EMMENTAL'\n",
+      " 'KOUIGN AMANN' 'BOULE 200G' 'BOULE 400G' 'GAL FRANGIPANE 6P' 'CAMPAGNE'\n",
+      " 'MOISSON' 'CAFE OU EAU' 'BRIOCHE' 'CEREAL BAGUETTE' 'SEIGLE' 'COMPLET'\n",
+      " 'DIVERS PATISSERIE' 'GAL FRANGIPANE 4P' 'COOKIE' 'FICELLE'\n",
+      " 'PAIN AUX RAISINS' 'GAL POMME 6P' 'GAL POMME 4P' 'FINANCIER X5'\n",
+      " 'VIK BREAD' 'DIVERS VIENNOISERIE' 'GACHE' 'SANDWICH COMPLET'\n",
+      " 'PAIN BANETTE' 'GRAND FAR BRETON' 'QUIM BREAD' 'SPECIAL BREAD KG'\n",
+      " 'GD KOUIGN AMANN' 'BOULE POLKA' 'DEMI BAGUETTE' 'CHAUSSON AUX POMMES'\n",
+      " 'BAGUETTE GRAINE' 'DIVERS CONFISERIE' 'SUCETTE' 'DIVERS BOULANGERIE'\n",
+      " 'BOISSON 33CL' 'PATES' 'FORMULE SANDWICH' 'DIVERS SANDWICHS'\n",
+      " 'CROISSANT AMANDES' 'PAIN CHOCO AMANDES' 'SACHET VIENNOISERIE' 'NANTAIS'\n",
+      " 'CHOCOLAT' 'PAIN S/SEL' 'FONDANT CHOCOLAT' 'GAL POIRE CHOCO 6P'\n",
+      " 'GAL POIRE CHOCO 4P' 'GALETTE 8 PERS' 'SAND JB' 'SACHET DE CROUTON'\n",
+      " 'GRANDE SUCETTE' 'DEMI PAIN' 'TARTELETTE' 'FLAN' 'PARIS BREST' 'SAVARIN'\n",
+      " 'FLAN ABRICOT' 'BAGUETTE APERO' 'MILLES FEUILLES' 'CHOU CHANTILLY'\n",
+      " 'ECLAIR' 'ROYAL 4P' 'TARTE FRUITS 6P' 'TARTE FRUITS 4P' 'NOIX JAPONAISE'\n",
+      " 'THE' 'BRIOCHETTE' 'ROYAL 6P' 'ECLAIR FRAISE PISTACHE' '.'\n",
+      " 'GD FAR BRETON' 'TRIANGLES' 'TROPEZIENNE' 'TROPEZIENNE FRAMBOISE' 'ROYAL'\n",
+      " 'TARTE FRAISE 6P' 'TARTELETTE FRAISE' 'TARTE FRAISE 4PER' 'FRAISIER'\n",
+      " 'NID DE POULE' 'TARTELETTE CHOC' 'PAIN DE MIE' 'CRUMBLE' 'FINANCIER'\n",
+      " 'DIVERS BOISSONS' 'CAKE' 'VIENNOISE' 'TRAITEUR' 'PAIN GRAINES'\n",
+      " 'PLATPREPARE6,50' 'PLATPREPARE5,50' 'PLATPREPARE7,00'\n",
+      " 'FORMULE PLAT PREPARE' 'ST HONORE' 'BROWNIES' 'RELIGIEUSE'\n",
+      " 'PLATPREPARE6,00' 'DELICETROPICAL' 'CRUMBLECARAMEL OU PISTAE'\n",
+      " 'PT NANTAIS' 'GD NANTAIS' 'DOUCEUR D HIVER' 'TROIS CHOCOLAT'\n",
+      " 'ARTICLE 295' 'TARTE FINE' 'ENTREMETS' 'BRIOCHE DE NOEL' 'FRAMBOISIER'\n",
+      " 'BUCHE 4PERS' 'BUCHE 6PERS' 'GD PLATEAU SALE' 'BUCHE 8PERS'\n",
+      " 'PT PLATEAU SALE' 'REDUCTION SUCREES 12' 'PAIN NOIR'\n",
+      " 'REDUCTION SUCREES 24' 'BOTTEREAU' 'MERINGUE' 'PALMIER' 'PAILLE'\n",
+      " 'PLAT 6.50E' 'PLAT 7.60E' 'PLAT 7.00' 'PLAT' 'PLAT 8.30E' 'FORMULE PATE'\n",
+      " 'GUERANDAIS' 'PALET BRETON' 'CARAMEL NOIX' 'MACARON' '12 MACARON'\n",
+      " 'ARMORICAIN' 'PLAQUE TARTE 25P' 'SABLE F  P' 'PAIN SUISSE PEPITO'\n",
+      " 'TULIPE' 'TARTELETTE COCKTAIL' 'SACHET DE VIENNOISERIE']\n"
+     ]
+    }
+   ],
    "source": [
-    "# read the new CSV file and perform the same analysis on it\n",
     "bakery_sales_new = pd.read_csv(\"bakery_sales_new.csv\")\n",
     "bakery_items_new = bakery_sales_new[bakery_sales_new['product_category'] == 'Bakery'][['product_detail']].drop_duplicates()\n",
     "print(bakery_items_new['product_detail'].unique())\n"
@@ -132,21 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'bakery_sales_new' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 39\u001b[0m\n\u001b[0;32m     35\u001b[0m         prod_type \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOther\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m category, prod_type, article\n\u001b[1;32m---> 39\u001b[0m bakery_sales_new[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_category\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_type\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_detail\u001b[39m\u001b[38;5;124m'\u001b[39m]] \u001b[38;5;241m=\u001b[39m bakery_sales_new[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_detail\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(\n\u001b[0;32m     40\u001b[0m     \u001b[38;5;28;01mlambda\u001b[39;00m x: pd\u001b[38;5;241m.\u001b[39mSeries(map_article_to_category(x))\n\u001b[0;32m     41\u001b[0m )\n\u001b[0;32m     43\u001b[0m bakery_sales_new\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbakery_sales_merged.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'bakery_sales_new' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def map_article_to_category(article):\n",
     "    normalized = article.strip().upper()\n",
@@ -191,6 +218,264 @@
     ")\n",
     "\n",
     "bakery_sales_new.to_csv(\"bakery_sales_merged.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product Mapping:\n",
+      "BAGUETTE: 101\n",
+      "PAIN AU CHOCOLAT: 102\n",
+      "PAIN: 103\n",
+      "TRADITIONAL BAGUETTE: 104\n",
+      "CROISSANT: 105\n",
+      "BANETTE: 106\n",
+      "BANETTINE: 107\n",
+      "SPECIAL BREAD: 108\n",
+      "COUPE: 109\n",
+      "SAND JB EMMENTAL: 110\n",
+      "KOUIGN AMANN: 111\n",
+      "BOULE 200G: 112\n",
+      "BOULE 400G: 113\n",
+      "GAL FRANGIPANE 6P: 114\n",
+      "CAMPAGNE: 115\n",
+      "MOISSON: 116\n",
+      "CAFE OU EAU: 117\n",
+      "BRIOCHE: 118\n",
+      "CEREAL BAGUETTE: 119\n",
+      "SEIGLE: 120\n",
+      "COMPLET: 121\n",
+      "DIVERS PATISSERIE: 122\n",
+      "GAL FRANGIPANE 4P: 123\n",
+      "COOKIE: 124\n",
+      "FICELLE: 125\n",
+      "PAIN AUX RAISINS: 126\n",
+      "GAL POMME 6P: 127\n",
+      "GAL POMME 4P: 128\n",
+      "FINANCIER X5: 129\n",
+      "VIK BREAD: 130\n",
+      "DIVERS VIENNOISERIE: 131\n",
+      "GACHE: 132\n",
+      "SANDWICH COMPLET: 133\n",
+      "PAIN BANETTE: 134\n",
+      "GRAND FAR BRETON: 135\n",
+      "QUIM BREAD: 136\n",
+      "SPECIAL BREAD KG: 137\n",
+      "GD KOUIGN AMANN: 138\n",
+      "BOULE POLKA: 139\n",
+      "DEMI BAGUETTE: 140\n",
+      "CHAUSSON AUX POMMES: 141\n",
+      "BAGUETTE GRAINE: 142\n",
+      "DIVERS CONFISERIE: 143\n",
+      "SUCETTE: 144\n",
+      "DIVERS BOULANGERIE: 145\n",
+      "BOISSON 33CL: 146\n",
+      "PATES: 147\n",
+      "FORMULE SANDWICH: 148\n",
+      "DIVERS SANDWICHS: 149\n",
+      "CROISSANT AMANDES: 150\n",
+      "PAIN CHOCO AMANDES: 151\n",
+      "SACHET VIENNOISERIE: 152\n",
+      "NANTAIS: 153\n",
+      "CHOCOLAT: 154\n",
+      "PAIN S/SEL: 155\n",
+      "FONDANT CHOCOLAT: 156\n",
+      "GAL POIRE CHOCO 6P: 157\n",
+      "GAL POIRE CHOCO 4P: 158\n",
+      "GALETTE 8 PERS: 159\n",
+      "SAND JB: 160\n",
+      "SACHET DE CROUTON: 161\n",
+      "GRANDE SUCETTE: 162\n",
+      "DEMI PAIN: 163\n",
+      "TARTELETTE: 164\n",
+      "FLAN: 165\n",
+      "PARIS BREST: 166\n",
+      "SAVARIN: 167\n",
+      "FLAN ABRICOT: 168\n",
+      "BAGUETTE APERO: 169\n",
+      "MILLES FEUILLES: 170\n",
+      "CHOU CHANTILLY: 171\n",
+      "ECLAIR: 172\n",
+      "ROYAL 4P: 173\n",
+      "TARTE FRUITS 6P: 174\n",
+      "TARTE FRUITS 4P: 175\n",
+      "NOIX JAPONAISE: 176\n",
+      "THE: 177\n",
+      "BRIOCHETTE: 178\n",
+      "ROYAL 6P: 179\n",
+      "ECLAIR FRAISE PISTACHE: 180\n",
+      ".: 181\n",
+      "GD FAR BRETON: 182\n",
+      "TRIANGLES: 183\n",
+      "TROPEZIENNE: 184\n",
+      "TROPEZIENNE FRAMBOISE: 185\n",
+      "ROYAL: 186\n",
+      "TARTE FRAISE 6P: 187\n",
+      "TARTELETTE FRAISE: 188\n",
+      "TARTE FRAISE 4PER: 189\n",
+      "FRAISIER: 190\n",
+      "NID DE POULE: 191\n",
+      "TARTELETTE CHOC: 192\n",
+      "PAIN DE MIE: 193\n",
+      "CRUMBLE: 194\n",
+      "FINANCIER: 195\n",
+      "DIVERS BOISSONS: 196\n",
+      "CAKE: 197\n",
+      "VIENNOISE: 198\n",
+      "TRAITEUR: 199\n",
+      "PAIN GRAINES: 200\n",
+      "PLATPREPARE6,50: 201\n",
+      "PLATPREPARE5,50: 202\n",
+      "PLATPREPARE7,00: 203\n",
+      "FORMULE PLAT PREPARE: 204\n",
+      "ST HONORE: 205\n",
+      "BROWNIES: 206\n",
+      "RELIGIEUSE: 207\n",
+      "PLATPREPARE6,00: 208\n",
+      "DELICETROPICAL: 209\n",
+      "CRUMBLECARAMEL OU PISTAE: 210\n",
+      "PT NANTAIS: 211\n",
+      "GD NANTAIS: 212\n",
+      "DOUCEUR D HIVER: 213\n",
+      "TROIS CHOCOLAT: 214\n",
+      "ARTICLE 295: 215\n",
+      "TARTE FINE: 216\n",
+      "ENTREMETS: 217\n",
+      "BRIOCHE DE NOEL: 218\n",
+      "FRAMBOISIER: 219\n",
+      "BUCHE 4PERS: 220\n",
+      "BUCHE 6PERS: 221\n",
+      "GD PLATEAU SALE: 222\n",
+      "BUCHE 8PERS: 223\n",
+      "PT PLATEAU SALE: 224\n",
+      "REDUCTION SUCREES 12: 225\n",
+      "PAIN NOIR: 226\n",
+      "REDUCTION SUCREES 24: 227\n",
+      "BOTTEREAU: 228\n",
+      "MERINGUE: 229\n",
+      "PALMIER: 230\n",
+      "PAILLE: 231\n",
+      "PLAT 6.50E: 232\n",
+      "PLAT 7.60E: 233\n",
+      "PLAT 7.00: 234\n",
+      "PLAT: 235\n",
+      "PLAT 8.30E: 236\n",
+      "FORMULE PATE: 237\n",
+      "GUERANDAIS: 238\n",
+      "PALET BRETON: 239\n",
+      "CARAMEL NOIX: 240\n",
+      "MACARON: 241\n",
+      "12 MACARON: 242\n",
+      "ARMORICAIN: 243\n",
+      "PLAQUE TARTE 25P: 244\n",
+      "SABLE F  P: 245\n",
+      "PAIN SUISSE PEPITO: 246\n",
+      "TULIPE: 247\n",
+      "TARTELETTE COCKTAIL: 248\n",
+      "SACHET DE VIENNOISERIE: 249\n",
+      "\n",
+      "Missing values before cleaning:\n",
+      "transaction_id           0\n",
+      "transaction_date         0\n",
+      "transaction_time         0\n",
+      "transaction_qty          0\n",
+      "store_id            234005\n",
+      "store_location      234005\n",
+      "product_id          234005\n",
+      "unit_price               0\n",
+      "product_category         0\n",
+      "product_type             0\n",
+      "product_detail           0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Définir la liste brute des noms de produits\n",
+    "raw_names = [\n",
+    "    'BAGUETTE', 'PAIN AU CHOCOLAT', 'PAIN', 'TRADITIONAL BAGUETTE', 'CROISSANT',\n",
+    "    'BANETTE', 'BANETTINE', 'SPECIAL BREAD', 'COUPE', 'SAND JB EMMENTAL',\n",
+    "    'KOUIGN AMANN', 'BOULE 200G', 'BOULE 400G', 'GAL FRANGIPANE 6P', 'CAMPAGNE',\n",
+    "    'MOISSON', 'CAFE OU EAU', 'BRIOCHE', 'CEREAL BAGUETTE', 'SEIGLE', 'COMPLET',\n",
+    "    'DIVERS PATISSERIE', 'GAL FRANGIPANE 4P', 'COOKIE', 'FICELLE',\n",
+    "    'PAIN AUX RAISINS', 'GAL POMME 6P', 'GAL POMME 4P', 'FINANCIER X5',\n",
+    "    'VIK BREAD', 'DIVERS VIENNOISERIE', 'GACHE', 'SANDWICH COMPLET',\n",
+    "    'PAIN BANETTE', 'GRAND FAR BRETON', 'QUIM BREAD', 'SPECIAL BREAD KG',\n",
+    "    'GD KOUIGN AMANN', 'BOULE POLKA', 'DEMI BAGUETTE', 'CHAUSSON AUX POMMES',\n",
+    "    'BAGUETTE GRAINE', 'DIVERS CONFISERIE', 'SUCETTE', 'DIVERS BOULANGERIE',\n",
+    "    'BOISSON 33CL', 'PATES', 'FORMULE SANDWICH', 'DIVERS SANDWICHS',\n",
+    "    'CROISSANT AMANDES', 'PAIN CHOCO AMANDES', 'SACHET VIENNOISERIE', 'NANTAIS',\n",
+    "    'CHOCOLAT', 'PAIN S/SEL', 'FONDANT CHOCOLAT', 'GAL POIRE CHOCO 6P',\n",
+    "    'GAL POIRE CHOCO 4P', 'GALETTE 8 PERS', 'SAND JB', 'SACHET DE CROUTON',\n",
+    "    'GRANDE SUCETTE', 'DEMI PAIN', 'TARTELETTE', 'FLAN', 'PARIS BREST', 'SAVARIN',\n",
+    "    'FLAN ABRICOT', 'BAGUETTE APERO', 'MILLES FEUILLES', 'CHOU CHANTILLY',\n",
+    "    'ECLAIR', 'ROYAL 4P', 'TARTE FRUITS 6P', 'TARTE FRUITS 4P', 'NOIX JAPONAISE',\n",
+    "    'THE', 'BRIOCHETTE', 'ROYAL 6P', 'ECLAIR FRAISE PISTACHE', '.',\n",
+    "    'GD FAR BRETON', 'TRIANGLES', 'TROPEZIENNE', 'TROPEZIENNE FRAMBOISE', 'ROYAL',\n",
+    "    'TARTE FRAISE 6P', 'TARTELETTE FRAISE', 'TARTE FRAISE 4PER', 'FRAISIER',\n",
+    "    'NID DE POULE', 'TARTELETTE CHOC', 'PAIN DE MIE', 'CRUMBLE', 'FINANCIER',\n",
+    "    'DIVERS BOISSONS', 'CAKE', 'VIENNOISE', 'TRAITEUR', 'PAIN GRAINES',\n",
+    "    'PLATPREPARE6,50', 'PLATPREPARE5,50', 'PLATPREPARE7,00',\n",
+    "    'FORMULE PLAT PREPARE', 'ST HONORE', 'BROWNIES', 'RELIGIEUSE',\n",
+    "    'PLATPREPARE6,00', 'DELICETROPICAL', 'CRUMBLECARAMEL OU PISTAE',\n",
+    "    'PT NANTAIS', 'GD NANTAIS', 'DOUCEUR D HIVER', 'TROIS CHOCOLAT',\n",
+    "    'ARTICLE 295', 'TARTE FINE', 'ENTREMETS', 'BRIOCHE DE NOEL', 'FRAMBOISIER',\n",
+    "    'BUCHE 4PERS', 'BUCHE 6PERS', 'GD PLATEAU SALE', 'BUCHE 8PERS',\n",
+    "    'PT PLATEAU SALE', 'REDUCTION SUCREES 12', 'PAIN NOIR',\n",
+    "    'REDUCTION SUCREES 24', 'BOTTEREAU', 'MERINGUE', 'PALMIER', 'PAILLE',\n",
+    "    'PLAT 6.50E', 'PLAT 7.60E', 'PLAT 7.00', 'PLAT', 'PLAT 8.30E', 'FORMULE PATE',\n",
+    "    'GUERANDAIS', 'PALET BRETON', 'CARAMEL NOIX', 'MACARON', '12 MACARON',\n",
+    "    'ARMORICAIN', 'PLAQUE TARTE 25P', 'SABLE F  P', 'PAIN SUISSE PEPITO',\n",
+    "    'TULIPE', 'TARTELETTE COCKTAIL', 'SACHET DE VIENNOISERIE'\n",
+    "]\n",
+    "\n",
+    "# Deleting space and converting to uppercase\n",
+    "clean_names = [n.strip().upper() for n in raw_names]\n",
+    "\n",
+    "#create a dictionary to map the product names to product ids\n",
+    "prod_map = {name: num for num, name in enumerate(clean_names, start=101)}\n",
+    "\n",
+    "print(\"Product Mapping:\")\n",
+    "#printing the product mapping\n",
+    "for key, value in prod_map.items():\n",
+    "    print(f\"{key}: {value}\")\n",
+    "\n",
+    "data = pd.read_csv('bakery_sales_merged.csv')\n",
+    "\n",
+    "print(\"\\nMissing values before cleaning:\")\n",
+    "print(data.isnull().sum())\n",
+    "\n",
+    "data['store_id'] = data['store_id'].fillna(1)\n",
+    "data['store_location'] = data['store_location'].fillna('Bakery - Default Location')\n",
+    "\n",
+    "data['product_detail'] = data['product_detail'].astype(str).str.strip().str.upper()\n",
+    "\n",
+    "\n",
+    "# Assign a product ID from 'prod_map' for rows where 'product_id' equals 0\n",
+    "data['product_id'] = data.apply(\n",
+    "    lambda row: prod_map.get(row['product_detail'], 999) if row['product_id'] == 0 else row['product_id'],\n",
+    "    axis=1\n",
+    ")\n",
+    "\n",
+    "# Convert the 'transaction_id' column to integer\n",
+    "data['transaction_id'] = data['transaction_id'].astype(int)\n",
+    "\n",
+    "print(\"\\nMissing values after cleaning:\")\n",
+    "# Print the count of missing values after data cleaning\n",
+    "print(data.isnull().sum())\n",
+    "\n",
+    "# Save the cleaned data to a new CSV file\n",
+    "output_file = 'Bakery_sales_cleaned.csv'\n",
+    "data.to_csv(output_file, index=False)\n",
+    "print(f\"\\nCleaning complete. Output saved to '{output_file}'\")\n"
    ]
   }
  ],
