cleaned missing values

--- a/merge.ipynb
+++ b/merge.ipynb
@@ -392,15 +392,31 @@
       "product_category         0\n",
       "product_type             0\n",
       "product_detail           0\n",
-      "dtype: int64\n"
+      "dtype: int64\n",
+      "\n",
+      "Missing values after cleaning:\n",
+      "transaction_id      0\n",
+      "transaction_date    0\n",
+      "transaction_time    0\n",
+      "transaction_qty     0\n",
+      "store_id            0\n",
+      "store_location      0\n",
+      "product_id          0\n",
+      "unit_price          0\n",
+      "product_category    0\n",
+      "product_type        0\n",
+      "product_detail      0\n",
+      "dtype: int64\n",
+      "\n",
+      "Cleaning complete. Cleaned data saved as 'Bakery_sales_cleaned.csv'.\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Définir la liste brute des noms de produits\n",
-    "raw_names = [\n",
+    "# Step 1: Create a mapping of product names to product IDs.\n",
+    "raw_product_names = [\n",
     "    'BAGUETTE', 'PAIN AU CHOCOLAT', 'PAIN', 'TRADITIONAL BAGUETTE', 'CROISSANT',\n",
     "    'BANETTE', 'BANETTINE', 'SPECIAL BREAD', 'COUPE', 'SAND JB EMMENTAL',\n",
     "    'KOUIGN AMANN', 'BOULE 200G', 'BOULE 400G', 'GAL FRANGIPANE 6P', 'CAMPAGNE',\n",
@@ -437,45 +453,54 @@
     "    'TULIPE', 'TARTELETTE COCKTAIL', 'SACHET DE VIENNOISERIE'\n",
     "]\n",
     "\n",
-    "# Deleting space and converting to uppercase\n",
-    "clean_names = [n.strip().upper() for n in raw_names]\n",
+    "# Clean names: upper case and remove spaces.\n",
+    "clean_product_names = [name.strip().upper() for name in raw_product_names]\n",
     "\n",
-    "#create a dictionary to map the product names to product ids\n",
-    "prod_map = {name: num for num, name in enumerate(clean_names, start=101)}\n",
+    "# Create a dictionary where each product name is mapped to a unique id.\n",
+    "product_map = {name: idx for idx, name in enumerate(clean_product_names, start=101)}\n",
     "\n",
+    "# Show the mapping information.\n",
     "print(\"Product Mapping:\")\n",
-    "#printing the product mapping\n",
-    "for key, value in prod_map.items():\n",
-    "    print(f\"{key}: {value}\")\n",
+    "for product, pid in product_map.items():\n",
+    "    print(f\"{product}: {pid}\")\n",
     "\n",
-    "data = pd.read_csv('bakery_sales_merged.csv')\n",
+    "# Read the cleaned sales file.\n",
+    "df = pd.read_csv('bakery_sales_merged.csv')\n",
     "\n",
+    "# Check missing values before fixing data.\n",
     "print(\"\\nMissing values before cleaning:\")\n",
-    "print(data.isnull().sum())\n",
+    "print(df.isnull().sum())\n",
     "\n",
-    "data['store_id'] = data['store_id'].fillna(1)\n",
-    "data['store_location'] = data['store_location'].fillna('Bakery - Default Location')\n",
+    "# Replace missing store info with default values.\n",
+    "df['store_id'] = df['store_id'].fillna(1)\n",
+    "df['store_location'] = df['store_location'].fillna('Bakery - Default Location')\n",
     "\n",
-    "data['product_detail'] = data['product_detail'].astype(str).str.strip().str.upper()\n",
+    "# Clean product details and format the string.\n",
+    "df['product_detail'] = df['product_detail'].astype(str).str.strip().str.upper()\n",
     "\n",
+    "# Ensure product_id exists and fill missing ones with 0.\n",
+    "if 'product_id' not in df.columns:\n",
+    "    df['product_id'] = 0\n",
+    "else:\n",
+    "    df['product_id'] = df['product_id'].fillna(0)\n",
     "\n",
-    "# Assign a product ID from 'prod_map' for rows where 'product_id' equals 0\n",
-    "data['product_id'] = data.apply(\n",
-    "    lambda row: prod_map.get(row['product_detail'], 999) if row['product_id'] == 0 else row['product_id'],\n",
+    "# Map the product details to product IDs using the dictionary.\n",
+    "df['product_id'] = df.apply(\n",
+    "    lambda row: product_map.get(row['product_detail'], 999) if row['product_id'] == 0 else row['product_id'],\n",
     "    axis=1\n",
     ")\n",
     "\n",
-    "# Convert the 'transaction_id' column to integer\n",
-    "data['transaction_id'] = data['transaction_id'].astype(int)\n",
+    "# Convert transaction ids to integer type.\n",
+    "df['transaction_id'] = df['transaction_id'].astype(int)\n",
     "\n",
+    "# Show missing values after cleaning.\n",
     "print(\"\\nMissing values after cleaning:\")\n",
-    "# Print the count of missing values after data cleaning\n",
-    "print(data.isnull().sum())\n",
+    "print(df.isnull().sum())\n",
     "\n",
-    "# Save the cleaned data to a new CSV file\n",
-    "output_file = 'Bakery_sales_cleaned.csv'\n",
-    "data.to_csv(output_file, index=False)\n",
-    "print(f\"\\nCleaning complete. Output saved to '{output_file}'\")\n"
+    "# Save the cleaned data to a csv file.\n",
+    "output_filename = 'Bakery_sales_cleaned.csv'\n",
+    "df.to_csv(output_filename, index=False)\n",
+    "print(f\"\\nCleaning complete. Cleaned data saved as '{output_filename}'.\")\n"
    ]
   }
  ],
