--- a/merge.ipynb
+++ b/merge.ipynb
@@ -502,6 +502,109 @@
     "df.to_csv(output_filename, index=False)\n",
     "print(f\"\\nCleaning complete. Cleaned data saved as '{output_filename}'.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "Name: sales_id, dtype: int64\n",
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "3    4\n",
+      "4    5\n",
+      "Name: sales_id, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"Bakery_sales_cleaned.csv\")\n",
+    "df['sales_id'] = range(1, len(df) + 1)\n",
+    "df.to_csv(\"Bakery_sales_cleaned.csv\", index=False)\n",
+    "\n",
+    "df2 = pd.read_csv(\"Coffee_Shop_Sales.csv\") \n",
+    "df2['sales_id'] = range(1, len(df2) + 1)\n",
+    "df2.to_csv(\"Coffee_Shop_Sales.csv\", index=False)\n",
+    "\n",
+    "print(df['sales_id'].head())\n",
+    "print(df2['sales_id'].head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Local Image](erd.png)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "CREATE TABLE Store (\n",
+    "    store_id INT PRIMARY KEY,\n",
+    "    store_location VARCHAR(255)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE Transactions (\n",
+    "    sale_id INT PRIMARY KEY,\n",
+    "    transaction_id INT,\n",
+    "    transaction_date DATE,\n",
+    "    transaction_time TIME,\n",
+    "    transaction_qty INT,\n",
+    "    store_id INT,\n",
+    "    product_id INT,\n",
+    "    FOREIGN KEY (store_id) REFERENCES Store(store_id),\n",
+    "    FOREIGN KEY (product_id) REFERENCES Product(product_id)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE Product (\n",
+    "    product_id INT PRIMARY KEY,\n",
+    "    product_category VARCHAR(255)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE Coffee (\n",
+    "    product_id INT PRIMARY KEY,\n",
+    "    product_type VARCHAR(255),\n",
+    "    product_detail VARCHAR(255),\n",
+    "    unitprice DECIMAL(10,2),\n",
+    "    FOREIGN KEY (product_id) REFERENCES Product(product_id)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE Tea (\n",
+    "    product_id INT PRIMARY KEY,\n",
+    "    product_type VARCHAR(255),\n",
+    "    product_detail VARCHAR(255),\n",
+    "    unitprice DECIMAL(10,2),\n",
+    "    FOREIGN KEY (product_id) REFERENCES Product(product_id)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE DrinkingChocolateBakery (\n",
+    "    product_id INT PRIMARY KEY,\n",
+    "    product_type VARCHAR(255),\n",
+    "    product_detail VARCHAR(255),\n",
+    "    unitprice DECIMAL(10,2),\n",
+    "    FOREIGN KEY (product_id) REFERENCES Product(product_id)\n",
+    ");\n"
+   ]
   }
  ],
  "metadata": {
