--- a/merge.ipynb
+++ b/merge.ipynb
@@ -578,31 +578,10 @@
     "\n",
     "CREATE TABLE Product (\n",
     "    product_id INT PRIMARY KEY,\n",
-    "    product_category VARCHAR(255)\n",
-    ");\n",
-    "\n",
-    "CREATE TABLE Coffee (\n",
-    "    product_id INT PRIMARY KEY,\n",
-    "    product_type VARCHAR(255),\n",
-    "    product_detail VARCHAR(255),\n",
-    "    unitprice DECIMAL(10,2),\n",
-    "    FOREIGN KEY (product_id) REFERENCES Product(product_id)\n",
-    ");\n",
-    "\n",
-    "CREATE TABLE Tea (\n",
-    "    product_id INT PRIMARY KEY,\n",
-    "    product_type VARCHAR(255),\n",
-    "    product_detail VARCHAR(255),\n",
-    "    unitprice DECIMAL(10,2),\n",
-    "    FOREIGN KEY (product_id) REFERENCES Product(product_id)\n",
-    ");\n",
-    "\n",
-    "CREATE TABLE DrinkingChocolateBakery (\n",
-    "    product_id INT PRIMARY KEY,\n",
-    "    product_type VARCHAR(255),\n",
-    "    product_detail VARCHAR(255),\n",
-    "    unitprice DECIMAL(10,2),\n",
-    "    FOREIGN KEY (product_id) REFERENCES Product(product_id)\n",
+    "    product_category VARCHAR(255) NOT NULL,  \n",
+    "    product_type VARCHAR(255),              \n",
+    "    product_detail VARCHAR(255),             \n",
+    "    unit_price DECIMAL(10,2) NOT NULL\n",
     ");\n"
    ]
   }
